--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -167,6 +167,7 @@ header {
   align-items: center;
   border-bottom: solid 1vh var(--base-border);
   border-radius: 1em;
+  font-size: 1.3vw;
 }
 
 #main__section {
@@ -222,7 +223,7 @@ header {
   filter: invert(1);
 }
 
-/* left sidebar extra content */
+/* left sidebar start game content */
 
 #choosing_cpu {
 min-width: 100%;
@@ -239,6 +240,10 @@ border-bottom: solid 1px var(--base-border);
   justify-content: center;
   font-size: x-large;
   margin-top: 1em;
+}
+
+#start__button{
+  
 }
 
 /* =========
@@ -621,7 +626,7 @@ h1, h2, h3, h4, h5, h6 {
             ======== */
 
 input {
-  width: 15ch;
+  width: 19ch;
   max-width: 80%;
   height: 2rem;
   text-align: center;
